# tootodo-be

./: Caddyfile  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: prod.yml
.sqlx/: query-82feadd8402203d4a7ee1d87bce18d0ed53cc718211e1ab04fc1a005c3810c8d.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-a1b32565e1cdba19982941d9b38f4ddbac2bd61f107265b3bae0b66d1ccd5da1.json  query-f1c2df39cdf0d88e9ffa6cd045c6bdf7e117cfc4a23362d6fec2ff8cf121407f.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
migrations/: 20240401005556_init.down.sql  20240401005556_init.up.sql
src/: config.rs  ctx.rs  error.rs  handler.rs  main.rs  route.rs
src/auth/: error.rs  handler.rs  mod.rs  model.rs
src/auth/utils/: auth.rs  google_oauth.rs  mod.rs  token.rs
src/db/: error.rs  mod.rs
src/domain/: block.rs  category.rs  chat.rs  daily.rs  error.rs  event.rs  habit.rs  memo.rs  mod.rs  note.rs  property.rs  schedule.rs  tag.rs  tag_group.rs  tag_relation.rs  task.rs  timer_result.rs  types.rs
src/domain/repo/: base.rs  base_array.rs  base_postgre.rs  mod.rs  tag.rs  tag_group.rs  tag_relation.rs  utils.rs
src/domain/sub/: chat.rs  daily_item.rs  habit_record.rs  mod.rs  note_block.rs  note_page.rs  note_propV.rs  property.rs  schedule_item.rs  tag.rs  task_block.rs  task_propV.rs
src/infra/: types.rs
src/infra/db/: error.rs  mod.rs
src/interface/: mod.rs  route.rs  te.rs
src/interface/dto/: category.rs  chat.rs  daily.rs  event.rs  habit.rs  memo.rs  mod.rs  note.rs  relation.rs  schedule.rs  tag.rs  tag_group.rs  task.rs
src/interface/dto/sub/: chat.rs  daily_item.rs  mod.rs  note_block.rs  note_propV.rs  property.rs  schedule_item.rs  task_block.rs  task_propV.rs
src/interface/handler/: category.rs  event.rs  habit.rs  memo.rs  mod.rs  note.rs  tag.rs  tag_group.rs  task.rs
src/model/: error.rs
src/model/memo/: error.rs  mod.rs  response.rs
src/models/: base.rs  base_array.rs  error.rs  mod.rs
src/models/category/: controller.rs  mod.rs  model.rs  property.rs  response.rs  schema.rs
src/models/chat/: controller.rs  mod.rs  model.rs  response.rs  schema.rs
src/models/event/: controller.rs  handler.rs  mod.rs  model.rs  response.rs  schema.rs
src/models/habit/: controller.rs  handler.rs  mod.rs  model.rs  response.rs  schema.rs
src/models/memo/: controller.rs  error.rs  handler.rs  mod.rs  model.rs  response.rs  schema.rs
src/models/note/: controller.rs  error.rs  handler.rs  mod.rs  model.rs  response.rs  schema.rs
src/models/task/: block.rs  controller.rs  mod.rs  model.rs  response.rs  schema.rs
src/utils/: auth.rs  google_oauth.rs
