[package]
name = "tootodo-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

argon2 = "0.5.0"
axum = { version = "0.7.2", features = ["macros"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
base64 = "0.22.0"
chrono = { version = "0.4.24", features = ["serde"] }
derive_more = { version = "0.99.17", features = ["from"] }
dotenv = "0.15.0"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
jsonwebtoken = "9.2.0"
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"] }
rand_core = { version = "0.6.4", features = ["std"] }
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.59"
time = "0.3.20"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["chrono", "axum_extras"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
validator = { version = "0.17.0", features = ["derive"] }
